Added Links And Images

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="Page">
         <div class="top">
             <div class="Header">
-                <img class="logo" src="images" alt="Ferrari Logo">
+                <img class="logo" src="images/Scuderia_Ferrari_Logo.svg" alt="Ferrari Logo">
                 <div class="menu">
-                    <h3>Ferrari</h3><!-- Ferrari Official Site-->
-                    <h3>Youtube</h3><!-- Ferrari YouTube-->
-                    <h3>Instagram</h3><!-- Ferrari Instagram-->
+                    <a href="ferrari.com"><h3>Ferrari</h3></a> <!-- Ferrari Official Site-->
+                    <a href="https://www.youtube.com/@Ferrari/featured"><h3>Youtube</h3></a><!-- Ferrari YouTube-->
+                    <a href="https://www.instagram.com/scuderiaferrari/"><h3>Instagram</h3></a><!-- Ferrari Instagram-->
                 </div>
             </div>
             <div class="ferrari-container">
@@ -26,7 +26,7 @@
                     <button id="signup">Sign Up</button>
                 </div>
                 <div class="F2004">
-                    <img src="images" alt="A Ferrari F2004">
+                    <img src="images/Michael_Schumacher_Ferrari_2004.jpg" alt="A Ferrari F2004">
                 </div>
             </div>
         </div>
@@ -34,10 +34,10 @@
             <h2 id="stats">Drivers</h2>
             <div class="drivers">
                 <div class="Photos">
-                    <img src="images" alt="Michael Schumacher">
-                    <img src="images" alt="Niki Lauda">
-                    <img src="images" alt="Alberto Ascari">
-                    <img src="images" alt="Kimi Raikkonen">
+                    <img src="images/Drivers/MichaelSchumacher.jpg" alt="Michael Schumacher">
+                    <img src="images/Drivers/MV5BMTQ1OTA4NjY4MV5BMl5BanBnXkFtZTgwMzE2MzcxMDE@.jpg" alt="Niki Lauda">
+                    <img src="images/Drivers/Ascari_last_photo_in_car.jpg" alt="Alberto Ascari">
+                    <img src="images/Drivers/kimi.jpg" alt="Kimi Raikkonen">
                 </div>
                 <div class="names">
                     <h3>Michael Schumacher</h3>
